Fix #brand.a style

--- a/index.html
+++ b/index.html
@@ -206,8 +206,14 @@
                 <div id='close'>Close</div>
             </div>
         </div>
-        <div id="brand" style="color: #eee !important; text-decoration: none !important;">
-            <a class="clear" target="_blank" rel="author" href="https://hermanbergwerf.com" title="Visit my website">&copy; Herman Bergwerf</a>
+        <div id="brand">
+            <a
+                class="clear"
+                target="_blank"
+                rel="author"
+                href="https://hermanbergwerf.com"
+                title="Visit my website" 
+                style="color: #eee !important; text-decoration: none !important;">&copy; Herman Bergwerf</a>
         </div>
         <script type='text/javascript'>
             var container, stats, gui;
